--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "migrate:resolve": "npx prisma migrate resolve --preview-feature",
     "prisma:studio": "npx prisma studio",
     "prisma:generate": "npx prisma generate",
-    "prisma:generate:watch": "npx prisma generate --watch"
+    "prisma:generate:watch": "npx prisma generate --watch",
+    "postinstall": "npm run prisma:generate"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
