--- a/env/local.env
+++ b/env/local.env
@@ -30,4 +30,6 @@ SMTP_SERVICE=afca.coffee
 SMTP_MAIL=noreply@afca.coffee
 SMTP_PASSWORD=AFCA1sBACK!
 
-SERVER_GOOGLE_CLIENT_ID=
+SERVER_GOOGLE_CLIENT_ID=321462751700-3bvi0c7157baki06ebgm6vcv6dnae0r4.apps.googleusercontent.com
+SERVER_GOOGLE_CLIENT_SECRET=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
+SERVER_CLIENT_BASE_URL=http://localhost:3000
