--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.15",
     "argon2": "^0.41.1",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
