--- a/env/local.env
+++ b/env/local.env
@@ -35,3 +35,5 @@ SERVER_GOOGLE_CLIENT_SECRET=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
 SERVER_CLIENT_BASE_URL=http://localhost:3000
 SERVER_BASE_URL=http://localhost:5000
 
+
+BOT_TOKEN=7658339527:AAEz1aTTlYzSGMAnHfGnw-IMraut-zMohAc
