--- a/package.json
+++ b/package.json
@@ -65,17 +65,20 @@
     "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "node-mailjet": "^6.0.6",
     "nodemailer": "^6.9.15",
     "nodemailer-express-handlebars": "^7.0.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-http-bearer": "^1.0.1",
     "prisma": "^5.19.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "slug": "^9.1.0",
     "slugify": "^1.6.6",
     "socket.io": "^4.7.5",
+    "telegraf": "^4.16.3",
     "uuid": "^10.0.0",
     "winston": "^3.14.2"
   },
